--- a/views/contactus.html
+++ b/views/contactus.html
@@ -79,7 +79,7 @@
 
         <!-- Social Media -->
 
-        <section class="socialMediaUno">
+        <section class="socialMediaUno" id="socialMediaUno">
             <a  class="mt-1" href="https://es-la.facebook.com/" target="_blank" >
                 <img src="../img/facebook.svg" alt="Logo facebook" class="iconLink">
             </a>
@@ -102,7 +102,7 @@
 
         <!-- ArrowUp -->
 
-        <section class="arrowUp">
+        <section class="arrowUp" id="arrowUp">
             <a class="arrow" href="#">
                 <img src="../img/arrowup.svg" alt="Flecha arriba">
             </a>
@@ -110,7 +110,7 @@
 
         <!-- FAQ -->
 
-        <section class="row accordion mx-5 px-5">
+        <section class="row accordion">
             <h3 class="col subtitle">Preguntas frecuentes</h3>
             <div class="scrollDownAnswers">
                 <details class="row">
@@ -232,7 +232,7 @@
 
         <!-- Formulario y mapa -->
 
-        <section class="formContainer m-5 p-5">
+        <section class="formContainer">
             <h3 class="subtitulo" id="contactanos">Contactanos</h3>
             <article class="row locationForm">
                 <iframe class="col-lg-6 col-sm-12 mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.4986237676567!2d-75.59054050369338!3d6
