--- a/views/services.html
+++ b/views/services.html
@@ -79,7 +79,7 @@
 
          <!-- Social Media -->
 
-        <section class="socialMediaUno">
+        <section class="socialMediaUno" id="socialMediaUno">
             <a class="mt-1" href="https://es-la.facebook.com/" target="_blank" >
                 <img src="../img/facebook.svg" alt="Logo facebook" class="iconLink">
             </a>
@@ -102,7 +102,7 @@
 
         <!-- ArrowUp -->
 
-        <section class="arrowUp">
+        <section class="arrowUp" id="arrowUp">
             <a class="arrow" href="#">
                 <img src="../img/arrowup.svg" alt="Flecha arriba">
             </a>
@@ -216,9 +216,9 @@
             <a href="contactus.html" class="contactanosDesarrolladores">Contactanos</a>
         </section>
 
-         <!-- Diseñadores -->
+        <!-- Diseñadores -->
 
-         <section class="row cards text-center" id="contenedorDesign">
+        <section class="row cards text-center" id="contenedorDesign">
             <h3 class="col p-4 subtitle">Tecnologías diseñador UX/UI</h3>
             <div class="row gx-0 contenedorDesigners">
                 <div class="row mx-0">
