--- a/views/testimonies.html
+++ b/views/testimonies.html
@@ -79,7 +79,7 @@
 
           <!-- Social Media -->
 
-        <section class="socialMediaUno">
+        <section class="socialMediaUno" id="socialMediaUno">
             <a class="mt-1" href="https://es-la.facebook.com/" target="_blank" >
                 <img src="../img/facebook.svg" alt="Logo facebook" class="iconLink">
             </a>
@@ -102,7 +102,7 @@
 
         <!-- ArrowUp -->
 
-        <section class="arrowUp">
+        <section class="arrowUp" id="arrowUp">
             <a class="arrow" href="#">
                 <img src="../img/arrowup.svg" alt="Flecha arriba">
             </a>
