--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ html .contenedor .arrow {
 .contenedorEmpleos {
   width: 85%;
   max-width: 1050px;
-  margin: 150px auto !important;
+  margin: 150px auto;
   flex-direction: column;
   margin: 0px auto;
 }
@@ -477,7 +477,7 @@ html .contenedor .arrow {
 
 .buscadorServices {
   width: 50%;
-  margin: 150px auto !important;
+  margin: 150px auto;
 }
 .buscadorServices p {
   font-size: 1rem;
@@ -487,7 +487,7 @@ html .contenedor .arrow {
 .buscadorServices input {
   width: 100%;
   font-size: 0.8rem;
-  border-radius: 50px !important;
+  border-radius: 50px;
   border: 1px solid #090909;
   box-shadow: 0 0 10px 2px #090909;
   background-color: #0f0f0f;
@@ -675,21 +675,17 @@ html .contenedor .arrow {
   height: 100%;
 }
 .bannerPublicidadDos .bannerSection .banner .accordion {
-  width: 100% !important;
-  margin: auto auto !important;
+  width: 100%;
+  margin: auto auto;
 }
 .bannerPublicidadDos .bannerSection .banner .accordion .accordion-Item .accordion-header {
-  font-size: 1rem !important;
-  font-family: "Poppins", sans-serif !important;
-}
-.bannerPublicidadDos .bannerSection .banner .accordion .accordion-Item .accordion-header .accordion-button {
-  box-shadow: none !important;
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
 }
 .bannerPublicidadDos .bannerSection .banner .accordion .accordion-body {
-  font-family: "Poppins", sans-serif !important;
-  font-size: 0.9rem !important;
-  font-weight: 400 !important;
-  color: #0c0c0c !important;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 400;
 }
 
 .contenedorMatch .bannerMatch {
@@ -1240,9 +1236,9 @@ html .contenedor .arrow {
 
 .accordion {
   width: 85%;
-  max-width: 1300px;
+  max-width: 1100px;
   height: auto;
-  margin: 150px auto !important;
+  margin: 150px auto;
 }
 .accordion .subtitle {
   color: #e3e3e3;
@@ -1308,9 +1304,9 @@ html .contenedor .arrow {
 
 .formContainer {
   width: 85%;
-  max-width: 1300px;
+  max-width: 1100px;
   height: auto;
-  margin: -50px auto 100px !important;
+  margin: 150px auto;
   text-align: center;
 }
 .formContainer .subtitulo {
@@ -1332,28 +1328,24 @@ html .contenedor .arrow {
   opacity: 0.4;
   transform: scale(103%);
 }
-.formContainer .locationForm .form .formControl {
-  border-radius: 50px !important;
-}
 .formContainer .locationForm .form .form-floating {
   font-size: 0.8rem;
   font-weight: 400;
   font-family: "Poppins", sans-serif;
   background-color: #0f0f0f;
   box-shadow: 0 0 10px 2px #090909;
-  border-radius: 50px !important;
+  border-radius: 50px;
 }
 .formContainer .locationForm .form .form-floating label {
   display: block;
   font-weight: 400;
   font-size: 0.8rem;
-  border-radius: 50px !important;
 }
 .formContainer .locationForm .form textarea, .formContainer .locationForm .form input {
   display: block;
   width: 100%;
   padding: 15px;
-  border-radius: 20px !important;
+  border-radius: 50px;
   font-size: 0.8rem;
   font-weight: 400;
   border: 1px solid transparent;
@@ -1361,13 +1353,16 @@ html .contenedor .arrow {
   box-shadow: 0 0 10px 2px #090909;
   color: #a2a2a2;
 }
+.formContainer .locationForm .form textarea {
+  border-radius: 10px;
+}
 .formContainer .locationForm .form .btnAccion {
   width: 46%;
   display: inline;
   cursor: pointer;
   background-color: #26A4E3;
   border: 1px solid #26A4E3;
-  border-radius: 50px !important;
+  border-radius: 50px;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 1rem;
@@ -1471,7 +1466,7 @@ html .contenedor .arrow {
 }
 .footer .footerMedium .news .accion input {
   width: 250px;
-  border-radius: 50px !important;
+  border-radius: 50px;
   border: 1px solid #090909;
   box-shadow: 0 0 10px 2px #090909;
   background-color: #0f0f0f;
@@ -1487,7 +1482,7 @@ html .contenedor .arrow {
   color: #e3e3e3;
   background-color: #26A4E3;
   border: 1px solid #26A4E3;
-  border-radius: 50px !important;
+  border-radius: 50px;
   cursor: pointer;
   padding: 12.5px 5px;
   text-decoration: none;
@@ -1635,11 +1630,11 @@ html .contenedor .arrow {
   .contenedor .heroSection .hero .cellphone {
     width: 33%;
   }
-  .contenedor .socialMediaUno, .contenedor .arrowUp {
-    display: none !important;
+  .contenedor #socialMediaUno, .contenedor #arrowUp {
+    display: none;
   }
   .contenedor .nosotros {
-    margin-top: 500px !important;
+    margin-top: 150px;
   }
   .footer .mainFooter {
     width: 85%;
@@ -1708,9 +1703,6 @@ html .contenedor .arrow {
     flex-direction: column-reverse;
     justify-content: space-around;
     align-items: center;
-  }
-  .contenedor .bannerPublicidadDos .bannerSection .banner .itemCellphones .accordion {
-    gap: 0 !important;
   }
   .contenedor .accordion .whatsApp {
     width: 30%;
@@ -1784,7 +1776,7 @@ html .contenedor .arrow {
     text-decoration: none;
     color: #e3e3e3;
     padding: 20px 350px 20px 40px !important;
-    margin-left: -83px !important;
+    margin-left: -83px;
     border-bottom: 1px solid transparent;
     transition: all 0.5s ease;
   }
@@ -1839,7 +1831,7 @@ html .contenedor .arrow {
     transform: scale(105%) rotate(270deg);
   }
   .contenedor .heroSection .hero .cellphone {
-    width: 53%;
+    width: 33%;
   }
   .contenedor .nosotros .containerInfo .info, .contenedor .nosotros .contenedorMatch .info, .contenedor .nosotros .contenedorEmpleos .info, .contenedor .nosotros .containerTestimony .info {
     width: 80%;
@@ -1920,14 +1912,6 @@ html .contenedor .arrow {
   .header .menu ul {
     display: flex;
   }
-  .header .menu ul li .categoria {
-    padding: 25px auto !important;
-    border-radius: 0px !important;
-    transition: all 0.5s ease;
-  }
-  .header .menu ul li:hover .categoria {
-    background-color: #0f0f0f;
-  }
   .header .menu .socialMedia {
     display: flex;
     justify-content: center;
@@ -1943,7 +1927,7 @@ html .contenedor .arrow {
     width: 100%;
   }
   .contenedor .heroSection .hero .cellphone {
-    width: 53%;
+    width: 48%;
   }
   .contenedor .contenedorEmpleos .jobs .empleosArticle {
     width: 80%;
@@ -1972,11 +1956,14 @@ html .contenedor .arrow {
 }
 @media (max-width: 490px) {
   .header .menu {
-    width: 100%;
+    width: 100vw;
     height: 100%;
   }
+  .header .menu ul li {
+    width: 100vw;
+  }
   .header .menu ul li .categoria {
-    font-size: 0.9rem !important;
+    font-size: 0.9rem;
   }
   .contenedor {
     max-width: 100%;
@@ -2000,7 +1987,7 @@ html .contenedor .arrow {
     font-size: 0.9rem;
   }
   .contenedor .heroSection .hero .cellphone {
-    width: 73%;
+    width: 63%;
   }
   .contenedor .nosotros {
     max-width: 100%;
@@ -2088,10 +2075,10 @@ html .contenedor .arrow {
     width: 100%;
   }
   .contenedor .bannerPublicidadDos .bannerSection .banner .accordion .accordion-item .accordion-header .title {
-    font-size: 0.9rem !important;
+    font-size: 0.9rem;
   }
   .contenedor .bannerPublicidadDos .bannerSection .banner .accordion .accordion-item .paragraph {
-    font-size: 0.8rem !important;
+    font-size: 0.8rem;
   }
   .contenedor .accordion {
     max-width: 100%;
@@ -2102,13 +2089,13 @@ html .contenedor .arrow {
     font-weight: 600;
   }
   .contenedor .accordion .scrollDownAnswers summary {
-    font-size: 0.9rem !important;
+    font-size: 0.9rem;
   }
   .contenedor .accordion .scrollDownAnswers p {
-    font-size: 0.8rem !important;
+    font-size: 0.8rem;
   }
   .contenedor .accordion .whatsApp {
-    width: 100% !important;
+    flex-grow: 1;
     font-size: 0.9rem;
   }
   .footer .mainFooter .footerMedium .news .accion .btnAccion {
@@ -2168,7 +2155,6 @@ html .contenedor .arrow {
 @media (max-width: 1250px) {
   .contenedor .buscadorServices {
     width: 70%;
-    margin: 0px auto;
   }
   .contenedor .card {
     width: 78%;
@@ -2195,8 +2181,8 @@ html .contenedor .arrow {
     width: 30%;
   }
   .contenedor .accordion, .contenedor .formContainer {
-    width: 90%;
-    margin: 0px auto;
+    width: 85%;
+    margin: 150px auto;
   }
   .contenedor .accordion .whatsApp, .contenedor .formContainer .whatsApp {
     width: 20%;
@@ -2240,11 +2226,7 @@ html .contenedor .arrow {
     width: 25%;
     padding: 20px 35px;
   }
-  .contenedor .accordion, .contenedor .formContainer {
-    width: 90%;
-    margin: 0px auto;
-  }
-  .contenedor .accordion .whatsApp, .contenedor .formContainer .whatsApp {
+  .contenedor .accordion .whatsApp {
     width: 30%;
     padding: 20px 35px;
   }
@@ -2274,16 +2256,8 @@ html .contenedor .arrow {
   .contenedor .containerTestimony .verMas {
     width: 25%;
   }
-  .contenedor .accordion {
-    width: 88%;
-    margin: 0px auto;
-  }
   .contenedor .accordion .whatsApp {
     width: 30%;
-  }
-  .contenedor .formContainer {
-    width: 88%;
-    margin: 0px auto;
   }
   .contenedor .formContainer .mapa {
     display: none;
@@ -2292,7 +2266,6 @@ html .contenedor .arrow {
 @media (max-width: 850px) {
   .contenedor .buscadorServices {
     width: 80%;
-    margin: 0px auto;
   }
   .contenedor .cards {
     width: 100%;
@@ -2326,11 +2299,7 @@ html .contenedor .arrow {
   .contenedor .containerTestimony .verMas {
     width: 30%;
   }
-  .contenedor .accordion, .contenedor .formContainer {
-    width: 100%;
-    margin: 0px auto;
-  }
-  .contenedor .accordion .whatsApp, .contenedor .formContainer .whatsApp {
+  .contenedor .accordion .whatsApp {
     width: 40%;
   }
 }
@@ -2344,7 +2313,7 @@ html .contenedor .arrow {
     display: flex;
   }
   .contenedor .cards .contenedorDevelopers .cardDev, .contenedor .cards .contenedorDevelopers .cardDesigners, .contenedor .cards .contenedorDesigners .cardDev, .contenedor .cards .contenedorDesigners .cardDesigners {
-    min-width: 240px !important;
+    min-width: 240px;
   }
   .contenedor .cards .contactanosDesarrolladores, .contenedor .cards .contactanosDiseñadores {
     width: 40%;
@@ -2364,7 +2333,7 @@ html .contenedor .arrow {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 0px 10px !important;
+    padding: 0px 20px;
     row-gap: 10px;
     overflow: hidden;
   }
@@ -2380,7 +2349,7 @@ html .contenedor .arrow {
     border-bottom: 1px solid #2e2e2e;
   }
   .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .postulate, .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .postulateDesign, .contenedor .containerDevelopment .vacanciesDesign .cardJob .postulate, .contenedor .containerDevelopment .vacanciesDesign .cardJob .postulateDesign, .contenedor .containerDesign .vacanciesDevelopment .cardJob .postulate, .contenedor .containerDesign .vacanciesDevelopment .cardJob .postulateDesign, .contenedor .containerDesign .vacanciesDesign .cardJob .postulate, .contenedor .containerDesign .vacanciesDesign .cardJob .postulateDesign {
-    width: 30%;
+    width: 38%;
     margin: 20px 0px;
     justify-content: space-around;
     align-items: center;
@@ -2406,10 +2375,6 @@ html .contenedor .arrow {
   .contenedor .containerTestimony .verMas {
     width: 35%;
   }
-  .contenedor .accordion, .contenedor .formContainer {
-    width: 100%;
-    margin: 0px auto;
-  }
 }
 @media (max-width: 490px) {
   .contenedor .buscadorServices p {
@@ -2424,7 +2389,7 @@ html .contenedor .arrow {
     margin: auto;
   }
   .contenedor .cards .contenedorDevelopers .cardDev, .contenedor .cards .contenedorDevelopers .cardDesigners, .contenedor .cards .contenedorDesigners .cardDev, .contenedor .cards .contenedorDesigners .cardDesigners {
-    width: 100% !important;
+    width: 100%;
     row-gap: 5px;
   }
   .contenedor .cards .contenedorDevelopers .cardDev h3, .contenedor .cards .contenedorDevelopers .cardDesigners h3, .contenedor .cards .contenedorDesigners .cardDev h3, .contenedor .cards .contenedorDesigners .cardDesigners h3 {
@@ -2463,7 +2428,7 @@ html .contenedor .arrow {
     font-size: 0.7rem;
   }
   .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .postulate, .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .postulateDesign, .contenedor .containerDevelopment .vacanciesDesign .cardJob .postulate, .contenedor .containerDevelopment .vacanciesDesign .cardJob .postulateDesign, .contenedor .containerDesign .vacanciesDevelopment .cardJob .postulate, .contenedor .containerDesign .vacanciesDevelopment .cardJob .postulateDesign, .contenedor .containerDesign .vacanciesDesign .cardJob .postulate, .contenedor .containerDesign .vacanciesDesign .cardJob .postulateDesign {
-    width: 50% !important;
+    width: 50%;
     margin: 20px 0px;
     font-size: 0.8rem;
     justify-content: space-around;
@@ -2504,10 +2469,6 @@ html .contenedor .arrow {
     width: 90%;
     font-size: 0.9rem;
   }
-  .contenedor .accordion {
-    width: 100%;
-    margin: 0px auto;
-  }
   .contenedor .formContainer .subtitulo {
     font-size: 1.2rem;
   }
@@ -2531,7 +2492,7 @@ html .contenedor .arrow {
     width: 50%;
   }
   .contenedor .containerTestimony {
-    width: 85% !important;
+    width: 85%;
   }
   .contenedor .containerTestimony .headline {
     width: 100%;
@@ -2547,10 +2508,7 @@ html .contenedor .arrow {
     top: 25%;
     left: 20%;
   }
-  .contenedor .accordion, .contenedor .formContainer {
-    width: 100%;
-  }
-  .contenedor .accordion .whatsApp, .contenedor .formContainer .whatsApp {
+  .contenedor .accordion .whatsApp {
     width: 100%;
   }
 }
