--- a/views/testimonies.html
+++ b/views/testimonies.html
@@ -136,7 +136,7 @@
                             <img src="../img/user1.svg" alt="Usuario" class="user">
                             <div class="data">
                                 <p>Sofia C.</p>
-                                <p>Dis.  UX/UI</p>
+                                <p>Dis. UX/UI</p>
                                 <p>Bogota, Col</p>
                             </div>
                             <div class="socialMedia">
@@ -177,7 +177,7 @@
                         <article class="opinionBottom">
                             <img src="../img/user2.svg" alt="Usuario" class="user">
                             <div class="data">
-                                <p>Erick B.</p>
+                                <p>Erika B.</p>
                                 <p>Des. Fullstack</p>
                                 <p>Lima, Per</p>
                             </div>
@@ -368,7 +368,7 @@
                         <article class="opinionBottom">
                             <img src="../img/user7.svg" alt="Usuario" class="user">
                             <div class="data">
-                                <p>Nora V.</p>
+                                <p>Alex V.</p>
                                 <p>Dis. UX/UI</p>
                                 <p>Bogota, Col</p>
                             </div>
@@ -437,7 +437,7 @@
                     <article class="opinionBottom">
                         <img src="../img/user9.svg" alt="Usuario" class="user">
                         <div class="data">
-                            <p>Sasha M.</p>
+                            <p>Esteban M.</p>
                             <p>Des. Fullstack</p>
                             <p>Bogota, Col</p>
                         </div>
@@ -509,7 +509,7 @@
                     <article class="opinionBottom">
                         <img src="../img/user11.svg" alt="Usuario" class="user">
                         <div class="data">
-                            <p>Bryan G.</p>
+                            <p>Tamara G.</p>
                             <p>Des. Fullstack</p>
                             <p>Cali, Col</p>
                         </div>
@@ -583,7 +583,7 @@
                     <article class="opinionBottom">
                         <img src="../img/user13.svg" alt="Usuario" class="user">
                         <div class="data">
-                            <p>Claudia L.</p>
+                            <p>Juan L.</p>
                             <p>Des. Fullstack</p>
                             <p>Lima, Per</p>
                         </div>
@@ -621,7 +621,7 @@
                     <article class="opinionBottom">
                         <img src="../img/user14.svg" alt="Usuario" class="user">
                         <div class="data">
-                            <p>Sofy L.</p>
+                            <p>Edwin L.</p>
                             <p>Dis. UX/UI</p>
                             <p>Quito, Ecu</p>
                         </div>
