--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -22,7 +22,6 @@
         .containerTestimony{
             width:100%;
             text-align: left;
-
             .headline{
                 width: 92%;
                 margin: 150px auto 100px;;
@@ -143,6 +142,11 @@
     }
 }
 @media (max-width:850px){
+    .header{
+        .drawer{
+            border-radius: 50%;
+        }
+    }
     .contenedor{
         .buscadorServices{
             width: 80%;
