Actualizacion Meta datos - Header

--- a/views/services.html
+++ b/views/services.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Servicios</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>"Servicios, Tu Próximo Equipo de Trabajo en Tecnología: Explora Nuestras Ofertas En Tecnología"</title>
     <!-- Google fonts poppins and press start 2p-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
