--- a/views/contactus.html
+++ b/views/contactus.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contactanos</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>"Contactanos, Estamos a tu Disposición: Contacto para Empresas y Usuarios"</title>
     <!-- Google fonts poppins and press start 2p-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
